--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test.server.coverage": "bunx http-server coverage/packages/server -c-1",
     "test.server.watch": "nx test server --codeCoverage --watch",
     "serve.elysia": "bun run check.server.types && bun run --watch apps/elysia/index.ts",
+    "serve.elysia.inspect": "bun run check.server.types && bun run --watch --inspect apps/elysia/index.ts",
     "serve.elysia.prod": "pm2 start \"bun run apps/elysia/index.ts\" --name borda-elysia -i max",
     "serve.angular": "nx serve angular"
   },
