--- a/package.json
+++ b/package.json
@@ -79,6 +79,11 @@
     "ts-node": "10.9.1",
     "tslib": "^2.6.2",
     "typescript": "5.3.3",
-    "zone.js": "0.14.3"
+    "zone.js": "0.14.3",
+    "@types/pluralize": "^0.0.33",
+    "dexie": "^4.0.8",
+    "fake-indexeddb": "^6.0.0",
+    "pluralize": "^8.0.0",
+    "zod": "^3.23.8"
   }
 }
