--- a/package.json
+++ b/package.json
@@ -6,57 +6,57 @@
   "license": "MIT",
   "scripts": {},
   "devDependencies": {
-    "@angular-devkit/build-angular": "17.1.1",
-    "@angular-devkit/core": "17.1.1",
-    "@angular-devkit/schematics": "17.1.1",
-    "@angular/animations": "17.1.1",
-    "@angular/cli": "~17.1.0",
-    "@angular/common": "17.1.1",
-    "@angular/compiler": "17.1.1",
-    "@angular/compiler-cli": "17.1.1",
-    "@angular/core": "17.1.1",
-    "@angular/forms": "17.1.1",
-    "@angular/language-service": "17.1.1",
-    "@angular/platform-browser": "17.1.1",
-    "@angular/platform-browser-dynamic": "17.1.1",
-    "@angular/router": "17.1.1",
+    "@angular-devkit/build-angular": "18.2.1",
+    "@angular-devkit/core": "18.2.1",
+    "@angular-devkit/schematics": "18.2.1",
+    "@angular/animations": "18.2.0",
+    "@angular/cli": "~18.2.0",
+    "@angular/common": "18.2.0",
+    "@angular/compiler": "18.2.0",
+    "@angular/compiler-cli": "18.2.0",
+    "@angular/core": "18.2.0",
+    "@angular/forms": "18.2.0",
+    "@angular/language-service": "18.2.0",
+    "@angular/platform-browser": "18.2.0",
+    "@angular/platform-browser-dynamic": "18.2.0",
+    "@angular/router": "18.2.0",
     "@clack/core": "^0.2.1",
     "@clack/prompts": "^0.5.1",
     "@elysiajs/cors": "^0.8.0",
     "@elysiajs/html": "^0.8.0",
     "@inrupt/jest-jsdom-polyfills": "^1.5.3",
-    "@nx/angular": "17.3.0",
-    "@nx/devkit": "17.3.0",
-    "@nx/eslint": "17.3.0",
-    "@nx/jest": "17.3.0",
-    "@nx/rollup": "^18.0.3",
+    "@nx/angular": "19.6.4",
+    "@nx/devkit": "19.6.4",
+    "@nx/eslint": "19.6.4",
+    "@nx/jest": "19.6.4",
+    "@nx/rollup": "19.6.4",
     "@reduxjs/toolkit": "^2.1.0",
     "@rollup/plugin-typescript": "^11.1.6",
-    "@schematics/angular": "17.1.1",
+    "@schematics/angular": "18.2.1",
     "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.12",
     "@types/ejs": "^3.1.2",
     "@types/express": "^4.17.17",
-    "@types/jest": "29.4.4",
+    "@types/jest": "29.5.12",
     "@types/node": "18.19.10",
     "@types/node-fetch": "^2.6.2",
     "@types/redux-watch": "^1.1.0",
-    "@typescript-eslint/eslint-plugin": "6.20.0",
-    "@typescript-eslint/parser": "6.20.0",
+    "@typescript-eslint/eslint-plugin": "7.18.0",
+    "@typescript-eslint/parser": "7.18.0",
     "bcryptjs": "^2.4.3",
     "chalk": "^5.2.0",
     "ejs": "^3.1.8",
     "elysia": "^0.8.17",
     "esbuild": "^0.19.2",
-    "eslint": "8.48.0",
+    "eslint": "8.57.0",
     "eslint-config-prettier": "9.1.0",
     "fs-extra": "^11.1.0",
-    "jest": "29.4.3",
-    "jest-environment-jsdom": "29.4.3",
-    "jest-preset-angular": "13.1.6",
+    "jest": "29.7.0",
+    "jest-environment-jsdom": "29.7.0",
+    "jest-preset-angular": "14.1.1",
     "mongodb": "^6.3.0",
     "mongodb-memory-server": "^9.1.6",
-    "nx": "17.3.0",
+    "nx": "19.6.4",
     "password-validator": "^5.3.0",
     "picocolors": "^1.0.0",
     "prettier": "^2.6.2",
@@ -69,7 +69,7 @@
     "ts-node": "10.9.1",
     "tslib": "^2.6.2",
     "typescript": "5.3.3",
-    "zone.js": "0.14.3",
+    "zone.js": "0.14.4",
     "@types/pluralize": "^0.0.33",
     "dexie": "^4.0.8",
     "fake-indexeddb": "^6.0.0",
