--- a/package.json
+++ b/package.json
@@ -129,6 +129,7 @@
     "clsx": "^1.2.1",
     "dev": "^0.1.3",
     "embla-carousel-angular": "^14.0.0",
+    "ngx-date-fns": "^11.0.0",
     "ngx-scrollbar": "^13.0.1",
     "ngx-sonner": "^2.0.0",
     "ngxtension": "^4.0.0"
