--- a/packages/client/project.json
+++ b/packages/client/project.json
@@ -50,7 +50,9 @@
       "executor": "@nx/jest:jest",
       "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
       "options": {
-        "jestConfig": "packages/client/jest.config.ts"
+        "jestConfig": "packages/client/jest.config.ts",
+        "codeCoverage": true,
+        "coverageReporters": ["json-summary", "lcov", "html", "text"]
       }
     }
   },
